--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -37,7 +40,37 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    def camerax_version = "1.1.0-beta02"
+    def lifecycle_comp_versions = "2.4.1"
+    def gpu_img_version = "2.0.4"
+    def kirich_vb_prop_version = "1.5.3"
+    def dagger_version = "2.28.3"
+
+    // CameraX core library using the camera2 implementation
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "jp.co.cyberagent.android:gpuimage:$gpu_img_version"
+
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_comp_versions"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_comp_versions"
+
+    //navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$lifecycle_comp_versions"
+    implementation "androidx.navigation:navigation-ui-ktx:$lifecycle_comp_versions"
+
+    //view
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$kirich_vb_prop_version"
+
+    //di
+    implementation "com.google.dagger:dagger:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+
 }
