--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -32,6 +33,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    kapt {
+        generateStubs = true
+    }
 }
 
 dependencies {
@@ -50,7 +54,7 @@ dependencies {
     def lifecycle_comp_versions = "2.4.1"
     def gpu_img_version = "2.0.4"
     def kirich_vb_prop_version = "1.5.3"
-    def dagger_version = "2.28.3"
+    def dagger_android_version = "2.35.1"
 
     // CameraX core library using the camera2 implementation
     implementation "androidx.camera:camera-core:$camerax_version"
@@ -70,7 +74,14 @@ dependencies {
     implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$kirich_vb_prop_version"
 
     //di
-    implementation "com.google.dagger:dagger:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_android_version"
+    implementation "com.google.dagger:dagger-android:$dagger_android_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_android_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_android_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_android_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_android_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_android_version"
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+    implementation 'javax.inject:javax.inject:1'
 
 }
